--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,10 +6,10 @@ version: 1.0.0+1
 
 environment:
   sdk: ^3.0.0
-
 dependencies:
   flutter:
     sdk: flutter
+  dio: ^5.4.0  
 
 dev_dependencies:
   flutter_test:
